--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "biome format --write"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@radix-ui/react-label": "^2.1.8",
     "@tabler/icons-react": "^3.36.1",
     "@tailwindcss/cli": "^4.1.18",
