--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
+    "jose": "^6.1.3",
     "lucide-react": "^0.562.0",
     "motion": "^12.29.0",
     "next": "16.1.4",
+    "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "tailwind-merge": "^3.4.0"
