--- a/package.json
+++ b/package.json
@@ -14,18 +14,20 @@
     "@emotion/styled": "^11.14.1",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-slot": "^1.2.4",
-    "@tabler/icons-react": "^3.36.1",
+    "@supabase/supabase-js": "^2.97.0",
+    "@tabler/icons-react": "^3.37.1",
     "@tailwindcss/cli": "^4.1.18",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
     "jose": "^6.1.3",
     "lucide-react": "^0.562.0",
-    "motion": "^12.29.0",
+    "motion": "^12.34.3",
     "next": "16.1.4",
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-dropzone": "^15.0.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
